--- a/Capstone/appsettings.json
+++ b/Capstone/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Db": "Data Source=localhost\\sqlexpress;Initial Catalog=Capstone;Integrated Security=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
