Aggiornamenti profilo utente e integrazione Spotify
Sono state apportate le seguenti modifiche principali:
- Aggiunto il pacchetto `QRCoder` versione `1.6.0` in `Capstone.csproj`.
- Modificato `UserController.cs` per includere nuovi metodi di gestione del profilo utente.
- Aggiunta la proprietà `QRCodeImage` e la nuova entità `EventTicketType` in `DataContextModelSnapshot.cs`.
- Aggiunti nuovi servizi e configurazioni per l'integrazione con l'API di Spotify in `Program.cs`.
- Aggiunti nuovi metodi in `IUserService.cs` e `UserService.cs` per la gestione del profilo utente.
- Modificato `_Layout.cshtml` per includere nuove voci di navigazione.
- Aggiornato `Profile.cshtml` per utilizzare `ProfileViewModel`.
- Aggiunte credenziali API di Spotify in `appsettings.json`.
- Aggiunta la classe `ImageHelper` per la gestione delle immagini degli eventi.
- Creata la migrazione `TicketTypeEventsTable` per definire il modello di database.
- Aggiunta la migrazione `AddedQrCodeInTicket` per memorizzare immagini QR nei biglietti.
- Aggiunti nuovi file ViewModel per la gestione del profilo utente.
- Aggiunto `SpotifyAuthService` per l'autenticazione con Spotify.

--- a/Capstone/appsettings.json
+++ b/Capstone/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "Db": "Data Source=localhost\\sqlexpress;Initial Catalog=Capstone;Integrated Security=True;TrustServerCertificate=True"
   },
+
+  //Spotify API Credentials
+  "Spotify": {
+    "ClientId": "dc6f8619d49345c495b067118c011695",
+    "ClientSecret": "6743e605817247a8b7046bfb07091357",
+    "TokenUrl": "https://accounts.spotify.com/api/token"
+  },
   "AllowedHosts": "*"
 }
