--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
+    <PackageReference Include="Stripe.net" Version="45.11.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
