--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\dj_details.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.1.34" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
@@ -23,6 +27,10 @@
     <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Stripe.net" Version="45.11.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Nuova cartella\" />
   </ItemGroup>
 
 </Project>
